fix: put z index and alignment issue of blue barrier label in contract details

--- a/sass/components/_barrier.scss
+++ b/sass/components/_barrier.scss
@@ -8,6 +8,7 @@
     top: 0;
     user-select: none;
     width: 100%;
+    z-index: 1;
 }
 /* Drag Lines and Prices */
 .chart-line {
